Update to correct selectors

--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -28,20 +28,17 @@ build:
         # - cmake .. $CMAKE_ARGS -DCMAKE_C_COMPILER=$PREFIX/bin/mpicc -DCMAKE_CXX_COMPILER=$PREFIX/bin/mpicxx
         # - cmake --build . -j
         - cmake --install build/gcc-release
-    - if: osx_64
+    - if: osx and not arm64
       then:
         # - rm -rf build
         # - mkdir build
         # - cd build
         # - cmake .. $CMAKE_ARGS -DCMAKE_C_COMPILER=$PREFIX/bin/mpicc -DCMAKE_CXX_COMPILER=$PREFIX/bin/mpicxx
         # - cmake --build . -j
-        - if [[ "$CONDA_BUILD_CROSS_COMPILATION" == "1" ]]; then
-            export OPAL_PREFIX="$PREFIX"
-          fi
         - cmake --preset clang-release-macos $CMAKE_ARGS -DCMAKE_C_COMPILER=$PREFIX/bin/mpicc -DCMAKE_CXX_COMPILER=$PREFIX/bin/mpicxx
         - cmake --build --preset clang-release-macos
         - cmake --install build/clang-release-macos
-    - if: osx_arm64
+    - if: osx and arm64
       then:
         - export OPAL_PREFIX="$PREFIX"
         - cmake --preset clang-release-macos $CMAKE_ARGS
@@ -56,7 +53,7 @@ requirements:
     - cmake
     - make
     - ninja
-    - if: osx_arm64
+    - if: (build_platform != target_platform)
       then:
         - openmpi-mpicxx
   host:
