--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -8,3 +8,7 @@ conda_forge_output_validation: true
 build_platform:
   osx_arm64: osx_64
 test: native_and_emulated
+azure:
+    # toggle for storing the conda build_artifacts directory (including the
+    # built packages) as an Azure pipeline artifact that can be downloaded
+    store_build_artifacts: True
