--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -47,7 +47,7 @@ requirements:
     - fftw * mpi_openmpi*
     - openmpi-mpicxx
     - eigen
-    - zlib <1.3.0
+    - zlib <1.3.0  # in order to work with rabbitmq of aiida-services
 
 tests:
   - package_contents:
