--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -7,6 +7,11 @@ conda_build:
 conda_forge_output_validation: true
 build_platform:
   osx_arm64: osx_64
+  linux_aarch64: linux_64
+  linux_ppc64le: linux_64
+provider:
+  linux_aarch64: default
+  linux_ppc64le: default
 test: native_and_emulated
 azure:
     # toggle for storing the conda build_artifacts directory (including the
