--- a/recipe/recipe.yaml
+++ b/recipe/recipe.yaml
@@ -72,18 +72,17 @@ tests:
       lib:
         - FANS
   - script:
-      - cd test
-      - ./run_tests.sh -n 1
-      # - cd pytest
-      # - pytest -v -s --from-pixi
+      # JSON test file has relative path to h5 included - changing that
+      - JSON_FILE="$PREFIX/etc/conda/test-files/$PKG_NAME/0/test/input_files/test_LinearElastic.json"
+      - MODIFIED_JSON_FILE="$PREFIX/etc/conda/test-files/$PKG_NAME/0/test/input_files/test_LinearElastic_mod.json"
+      - NEW_MS_FILENAME="$PREFIX/etc/conda/test-files/$PKG_NAME/0/test/microstructures/sphere32.h5"
+      # Use jq to create a modified copy of the JSON file
+      - jq --arg new_filename "$NEW_MS_FILENAME" '.microstructure.filepath = $new_filename' "$JSON_FILE" > "$MODIFIED_JSON_FILE"
+      # Run tests
+      - mpiexec -n 1 FANS "$MODIFIED_JSON_FILE" "$PREFIX/etc/conda/test-files/$PKG_NAME/0//test/test_results.h5"
     requirements:
       run:
         - jq
-        - bc
-        # - Python
-        # - pytest
-        # - numpy
-        # - MSUtils
     files:
       source:
         - test/
